force-app/main/default/objects/Invoice__c/fields/Change_in_Dispatch_Date_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Dispatch_Date_Reason__c</fullName>
    <label>Change in Dispatch Date _ Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>