force-app/main/default/objects/Invoice__c/fields/Customer_Payment_Update__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Update__c</fullName>
    <label>Customer Payment Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>