force-app/main/default/objects/Invoice__c/fields/Debit_Note__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note__c</fullName>
    <label>Debit Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>