force-app/main/default/objects/Invoice__c/fields/Distributor_Customer__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice (Distributor Customer)</relationshipLabel>
    <relationshipName>Customer_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>