force-app/main/default/objects/Invoice__c/fields/Freight_Charges__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charges__c</fullName>
    <label>Freight Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>