force-app/main/default/objects/Invoice__c/fields/Invoiced_Qty_in_KGs__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Qty_in_KGs__c</fullName>
    <label>Invoiced Qty in KGs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>