force-app/main/default/objects/Invoice__c/fields/Number_of_Packs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Packs__c</fullName>
    <label>Number of Packs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>