force-app/main/default/objects/Invoice__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Invoice</relationshipLabel>
    <relationshipName>Invoice</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>