force-app/main/default/objects/Invoice__c/fields/TCS_Value__c.field-meta.xml
<CustomField>
    <fullName>TCS_Value__c</fullName>
    <label>TCS Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>