force-app/main/default/objects/Invoice__c/fields/Total_Amount_with_GST_n_FREIGHT__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_GST_n_FREIGHT__c</fullName>
    <formula>Total_Amount__c +  Total_IGST__c + Total_SGST__c + Total_SGST__c + Freight_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>