force-app/main/default/objects/Invoice__c/fields/Total_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Amount__c</fullName>
    <formula>Total_Invoice_Amount__c    + Total_Debit_Note__c  - Total_Credit_Note__c -  Total_Return_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>