force-app/main/default/objects/Invoice__c/fields/Total_CGST__c.field-meta.xml
<CustomField>
    <fullName>Total_CGST__c</fullName>
    <label>Total CGST</label>
    <summarizedField>Invoice_Line_Item__c.CGST__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>