force-app/main/default/objects/Invoice__c/fields/Total_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Note__c</fullName>
    <label>Total Credit Note</label>
    <summarizedField>Invoice_Line_Item__c.Total_Bill__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Invoice_Type__c</field>
        <operation>equals</operation>
        <value>CREDIT_NOTE</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>