force-app/main/default/objects/Invoice__c/fields/Total_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_GST__c</fullName>
    <label>Total GST</label>
    <summarizedField>Invoice_Line_Item__c.Total_GST__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>