force-app/main/default/objects/Invoice__c/fields/Total_IGST__c.field-meta.xml
<CustomField>
    <fullName>Total_IGST__c</fullName>
    <label>Total IGST</label>
    <summarizedField>Invoice_Line_Item__c.IGST__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>