force-app/main/default/objects/Invoice__c/fields/Total_Left_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Left_Quantity__c</fullName>
    <formula>Total_Quantity__c -  Total_Returned_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Left Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>