force-app/main/default/objects/Invoice__c/fields/Total_Net__c.field-meta.xml
<CustomField>
    <fullName>Total_Net__c</fullName>
    <label>Total Net</label>
    <summarizedField>Invoice_Line_Item__c.Net_Value__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>