force-app/main/default/objects/Invoice__c/fields/Total_Returned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Returned_Quantity__c</fullName>
    <label>Total Returned Quantity</label>
    <summarizedField>Invoice_Line_Item__c.Quantity_in_KG__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Invoice_Type__c</field>
        <operation>equals</operation>
        <value>RETURN</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>