force-app/main/default/objects/Invoice__c/fields/Total_SGST__c.field-meta.xml
<CustomField>
    <fullName>Total_SGST__c</fullName>
    <label>Total SGST</label>
    <summarizedField>Invoice_Line_Item__c.SGST__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>