force-app/main/default/objects/Invoice__c/fields/Unique_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Unique_Invoice_No__c</fullName>
    <formula>Sales_Order__c +  Id</formula>
    <label>Unique Invoice No</label>
    <type>Text</type>
</CustomField>