force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoiced_Qty_in_KGs__c</columns>
    <columns>Amount__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Taxable_value__c</columns>
    <columns>Total_Bill__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>